--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,15 +3,18 @@ version: 0.0.54
 author: Andrew Mezoni <andrew.mezoni@gmail.com>
 description: PEG (Parsing expression grammar) parsers generator.
 homepage: https://github.com/mezoni/peg
+environment:
+  sdk: '>1.8.0 <3.0.0'
+
 dependencies:
-  args: any
-  args_helper: any
-  build_tools: any
-  collection: any
-  lists: any
-  parser_error: any
-  path: any
+  args: 0.13.2
+  args_helper: 0.0.11
+  build_tools: 0.0.15
+  collection: 1.1.1
+  lists: 0.0.23
+  parser_error: 0.0.1
+  path: 1.3.6
   strings: any
-  template_block: any
-  text: any
+  template_block: 0.1.6
+  text: 0.0.7
   yaml: any
